cabal-version: 2.2
name:          zerepoch-pab
version:       0.1.0.0
license:       Apache-2.0
license-files:
    LICENSE
    NOTICE

maintainer:    jann.mueller@blockchain-company.io
author:        Jann Müller
homepage:      https://github.com/tbco/zerepoch#readme
bug-reports:   https://github.com/tbco/zerepoch/issues
description:
    Please see the README on GitHub at <https://github.com/The-Blockchain-Company/zerepoch#readme>

build-type:    Simple

source-repository head
    type:     git
    location: https://github.com/tbco/zerepoch

flag defer-plugin-errors
    description:
        Defer errors from the plugin, useful for things like Haddock that can't handle it.

    default:     False
    manual:      True

common lang
    default-language:   Haskell2010
    default-extensions:
        DeriveFoldable
        DeriveFunctor
        DeriveGeneric
        DeriveLift
        DeriveTraversable
        ExplicitForAll
        GeneralizedNewtypeDeriving
        ScopedTypeVariables
        StandaloneDeriving

    ghc-options:
        -Wall -Wnoncanonical-monad-instances -Wincomplete-uni-patterns
        -Wincomplete-record-updates -Wredundant-constraints -Widentities
        -fobject-code -fno-ignore-interface-pragmas
        -fno-omit-interface-pragmas

    -- See Zerepoch Tx readme
    if flag(defer-plugin-errors)
        ghc-options: -fplugin-opt ZerepochTx.Plugin:defer-errors

library
    import:             lang
    build-tool-depends:
        bcc-node:bcc-node -any, bcc-cli:bcc-cli -any
    ghc-options:
        -Wunused-packages

    exposed-modules:
        Bcc.Api.NetworkId.Extra
        Bcc.BM.Data.Tracer.Extras
        Bcc.Chain
        Bcc.ChainIndex.ChainIndex
        Bcc.ChainIndex.Server
        Bcc.ChainIndex.Types
        Bcc.Node.API
        Bcc.Node.Client
        Bcc.Node.Mock
        Bcc.Node.Server
        Bcc.Node.Types
        Bcc.Protocol.Socket.Mock.Client
        Bcc.Protocol.Socket.Mock.Server
        Bcc.Protocol.Socket.Client
        Bcc.Protocol.Socket.Type
        Bcc.Wallet.API
        Bcc.Wallet.Client
        Bcc.Wallet.Mock
        Bcc.Wallet.Server
        Bcc.Wallet.Types
        Control.Concurrent.Availability
        Control.Concurrent.STM.Extras
        Control.Concurrent.STM.Extras.Stream
        Control.Monad.Freer.Delay
        Zerepoch.PAB.App
        Zerepoch.PAB.Arbitrary
        Zerepoch.PAB.Core
        Zerepoch.PAB.Core.ContractInstance
        Zerepoch.PAB.Core.ContractInstance.BlockchainEnv
        Zerepoch.PAB.Core.ContractInstance.RequestHandlers
        Zerepoch.PAB.Core.ContractInstance.STM
        Zerepoch.PAB.Db.Beam
        Zerepoch.PAB.Db.Beam.ContractStore
        Zerepoch.PAB.Db.Memory.ContractStore
        Zerepoch.PAB.Effects.Contract
        Zerepoch.PAB.Effects.Contract.Builtin
        Zerepoch.PAB.Effects.DbStore
        Zerepoch.PAB.Effects.TimeEffect
        Zerepoch.PAB.Effects.UUID
        Zerepoch.PAB.Events
        Zerepoch.PAB.Events.Contract
        Zerepoch.PAB.Events.ContractInstanceState
        Zerepoch.PAB.Instances
        Zerepoch.PAB.Monitoring.Config
        Zerepoch.PAB.Monitoring.Monitoring
        Zerepoch.PAB.Monitoring.PABLogMsg
        Zerepoch.PAB.Monitoring.Util
        Zerepoch.PAB.Run
        Zerepoch.PAB.Run.Cli
        Zerepoch.PAB.Run.Command
        Zerepoch.PAB.Run.CommandParser
        Zerepoch.PAB.Run.PSGenerator
        Zerepoch.PAB.Simulator
        Zerepoch.PAB.Timeout
        Zerepoch.PAB.Types
        Zerepoch.PAB.Webserver.API
        Zerepoch.PAB.Webserver.Client
        Zerepoch.PAB.Webserver.Handler
        Zerepoch.PAB.Webserver.Server
        Zerepoch.PAB.Webserver.Types
        Zerepoch.PAB.Webserver.WebSocket

    other-modules:      Servant.Extra
    hs-source-dirs:     src
    build-depends:
        , freer-extras
        , playground-common
        , zerepoch-chain-index
        , zerepoch-contract
        , zerepoch-ledger
        , zerepoch-tx
        , zerepoch-tx-plugin

    build-depends:
        QuickCheck -any,
        aeson -any,
        aeson-pretty -any,
        async -any,
        base >=4.9 && <5,
        bytestring -any,
        bcc-api -any,
        bcc-crypto -any,
        bcc-ledger-cole -any,
        bcc-prelude -any,
        bcc-slotting -any,
        containers -any,
        contra-tracer -any,
        cryptonite -any,
        cborg -any,
        freer-simple -any,
        fingertree -any,
        generic-arbitrary -any,
        http-client -any,
        http-client-tls -any,
        http-types -any,
        io-classes -any,
        lens -any,
        memory -any,
        monad-logger -any,
        mtl -any,
        network -any,
        network-mux -any,
        newtype-generics -any,
        nothunks -any,
        optparse-applicative -any,
        shardagnostic-consensus -any,
        shardagnostic-consensus-cole -any,
        shardagnostic-consensus-sophie -any,
        shardagnostic-consensus-bcc -any,
        shardagnostic-network -any,
        shardagnostic-network-framework -any,
        playground-common -any,
        zerepoch-ledger-api -any,
        purescript-bridge -any,
        prettyprinter >=1.1.0.1,
        quickcheck-instances -any,
        random -any,
        row-types -any,
        scientific -any,
        serialise -any,
        servant -any,
        servant-client -any,
        servant-server -any,
        servant-options -any,
        tagged -any,
        typed-protocols -any,
        typed-protocols-examples -any,
        servant-purescript -any,
        servant-websockets -any,
        stm -any,
        text -any,
        transformers -any,
        unliftio-core -any,
        unordered-containers -any,
        uuid -any,
        vector -any,
        warp -any,
        wai -any,
        wai-cors -any,
        Win32-network -any,
        websockets -any,
        yaml -any,
        mwc-random -any,
        primitive -any,
        hedgehog -any,
        tbco-monitoring -any,
        lobemo-backend-ekg -any,
        exceptions -any,
        data-default -any,
        time -any,
        time-units -any,
        beam-core -any,
        beam-sqlite -any,
        beam-migrate -any,
        sqlite-simple -any

executable zerepoch-pab-setup
    main-is:          Main.hs
    hs-source-dirs:   app
    other-modules:
        CommandParser

    default-language: Haskell2010
    ghc-options:
        -threaded -rtsopts -with-rtsopts=-N -Wall -Wcompat
        -Wincomplete-uni-patterns -Wincomplete-record-updates
        -Wno-missing-import-lists -Wredundant-constraints -O0

    build-depends:
        aeson -any,
        aeson-pretty -any,
        async -any,
        base                  >=4.9     && <5,
        bytestring -any,
        containers -any,
        contra-tracer -any,
        filepath -any,
        freer-extras -any,
        freer-simple -any,
        tbco-monitoring -any,
        lens -any,
        lobemo-backend-ekg -any,
        monad-logger -any,
        mtl -any,
        optparse-applicative -any,
        playground-common -any,
        zerepoch-contract -any,
        zerepoch-ledger -any,
        zerepoch-pab -any,
        zerepoch-use-cases -any,
        prettyprinter         >=1.1.0.1,
        purescript-bridge -any,
        row-types -any,
        servant-client -any,
        servant-purescript -any,
        servant-server -any,
        text -any,
        time-units -any,
        unliftio-core -any,
        uuid -any,
        yaml -any,

executable zerepoch-pab-examples
    main-is:          Main.hs
    hs-source-dirs:   examples
    other-modules:
        ContractExample.AtomicSwap
        ContractExample.PayToWallet
        ContractExample.WaitForTx
        ContractExample
    default-language: Haskell2010
    ghc-options:
        -threaded -rtsopts -with-rtsopts=-N -Wall -Wcompat
        -Wincomplete-uni-patterns -Wincomplete-record-updates
        -Wno-missing-import-lists -Wredundant-constraints -O0

    build-depends:
        , aeson
        , base              >=4.9 && <5
        , containers
        , data-default
        , freer-extras
        , freer-simple
        , lens
        , playground-common
        , zerepoch-contract
        , zerepoch-ledger
        , zerepoch-pab
        , zerepoch-use-cases
        , prettyprinter
        , purescript-bridge
        , row-types
        , servant-purescript
        , text

executable zerepoch-uniswap
    main-is:          Main.hs
    hs-source-dirs:   examples/uniswap
    other-modules:
    default-language: Haskell2010
    ghc-options:
        -threaded -rtsopts -with-rtsopts=-N -Wall -Wcompat
        -Wincomplete-uni-patterns -Wincomplete-record-updates
        -Wno-missing-import-lists -Wredundant-constraints -O0

    build-depends:
        , aeson
        , base              >=4.9 && <5
        , containers
        , data-default -any
        , freer-extras
        , freer-simple
        , zerepoch-contract
        , zerepoch-ledger
        , zerepoch-pab
        , zerepoch-use-cases
        , prettyprinter
        , text

executable zerepoch-pab-test-psgenerator
    default-language: Haskell2010
    hs-source-dirs:
        test-psgenerator
        test/full
        examples

    main-is:          TestPSGenerator.hs
    other-modules:
        ContractExample.AtomicSwap
        ContractExample.PayToWallet
        Zerepoch.PAB.Effects.Contract.ContractTest
        Zerepoch.PAB.Simulator.Test

    build-depends:
        QuickCheck -any,
        aeson -any,
        aeson-pretty -any,
        base >=4.9 && <5,
        bytestring -any,
        containers -any,
        data-default -any,
        freer-extras -any,
        freer-simple -any,
        http-client -any,
        http-client-tls -any,
        lens -any,
        monad-logger -any,
        mtl -any,
        zerepoch-contract -any,
        zerepoch-pab,
        zerepoch-use-cases -any,
        zerepoch-ledger -any,
        quickcheck-instances -any,
        servant-client -any,
        tasty -any,
        smallcheck -any,
        tasty-smallcheck -any,
        tasty-quickcheck -any,
        text -any,
        transformers -any,
        prettyprinter -any,
        row-types -any,
        zerepoch-tx -any,
        playground-common -any,
        servant-purescript -any,
        purescript-bridge -any,
        filepath -any

test-suite zerepoch-pab-test-light
    default-language: Haskell2010
    hs-source-dirs:   test/light
    type:             exitcode-stdio-1.0
    main-is:          Spec.hs
    other-modules:
        Bcc.Api.NetworkId.ExtraSpec
        Bcc.Wallet.ServerSpec
        Control.Concurrent.STM.ExtrasSpec

    build-depends:
        QuickCheck -any,
        aeson -any,
        aeson-pretty -any,
        base >=4.9 && <5,
        bytestring -any,
        bcc-api -any,
        containers -any,
        freer-extras -any,
        freer-simple -any,
        hedgehog -any,
        http-client -any,
        http-client-tls -any,
        lens -any,
        monad-logger -any,
        mtl -any,
        zerepoch-contract -any,
        zerepoch-pab,
        zerepoch-ledger -any,
        quickcheck-instances -any,
        servant-client -any,
        tasty -any,
        tasty-hunit -any,
        smallcheck -any,
        tasty-hedgehog -any,
        tasty-smallcheck -any,
        tasty-quickcheck -any,
        text -any,
        transformers -any,
        prettyprinter -any,
        stm -any,
        async -any,

test-suite zerepoch-pab-test-full
    default-language: Haskell2010
    hs-source-dirs:
        test/full
        examples

    type:             exitcode-stdio-1.0
    main-is:          Spec.hs
    other-modules:
        ContractExample
        ContractExample.WaitForTx
        ContractExample.AtomicSwap
        ContractExample.PayToWallet
        Zerepoch.PAB.CoreSpec
        Zerepoch.PAB.CliSpec
        Zerepoch.PAB.Effects.Contract.BuiltinSpec
        Zerepoch.PAB.Effects.Contract.ContractTest
        Zerepoch.PAB.Simulator.Test

    build-depends:
        QuickCheck -any,
        aeson -any,
        aeson-pretty -any,
        base >=4.9 && <5,
        bytestring -any,
        containers -any,
        data-default -any,
        freer-extras -any,
        freer-simple -any,
        http-client -any,
        http-client-tls -any,
        lens -any,
        monad-logger -any,
        mtl -any,
        zerepoch-contract -any,
        zerepoch-pab,
        zerepoch-use-cases -any,
        zerepoch-ledger -any,
        quickcheck-instances -any,
        servant-client -any,
        tasty -any,
        tasty-hunit -any,
        smallcheck -any,
        tasty-smallcheck -any,
        tasty-quickcheck -any,
        text -any,
        transformers -any,
        prettyprinter -any,
        row-types -any,
        zerepoch-tx -any,
        playground-common -any,
        yaml -any,
        tbco-monitoring -any,
        servant-server -any,
        purescript-bridge -any,
        async -any,
        servant-client -any,
        uuid -any,

test-suite zerepoch-pab-test-full-long-running
    default-language: Haskell2010
    hs-source-dirs:
        test/full
        examples

    type:             exitcode-stdio-1.0
    main-is:          SpecLongRunning.hs
    other-modules:
        ContractExample
        ContractExample.WaitForTx
        ContractExample.AtomicSwap
        ContractExample.PayToWallet
        Zerepoch.PAB.CliSpec
        Zerepoch.PAB.Effects.Contract.ContractTest
        Zerepoch.PAB.Simulator.Test

    build-depends:
        QuickCheck -any,
        aeson -any,
        aeson-pretty -any,
        base >=4.9 && <5,
        bytestring -any,
        containers -any,
        data-default -any,
        freer-extras -any,
        freer-simple -any,
        http-client -any,
        http-client-tls -any,
        lens -any,
        monad-logger -any,
        mtl -any,
        zerepoch-contract -any,
        zerepoch-pab,
        zerepoch-use-cases -any,
        zerepoch-ledger -any,
        quickcheck-instances -any,
        servant-client -any,
        tasty -any,
        tasty-hunit -any,
        smallcheck -any,
        tasty-smallcheck -any,
        tasty-quickcheck -any,
        text -any,
        transformers -any,
        prettyprinter -any,
        row-types -any,
        zerepoch-tx -any,
        playground-common -any,
        yaml -any,
        tbco-monitoring -any,
        servant-server -any,
        purescript-bridge -any,
        async -any,
        servant-client -any,
        uuid -any,

executable tx-inject
    import:           lang
    main-is:          Main.hs
    hs-source-dirs:   tx-inject
    other-modules:
        TxInject.RandomTx
    default-language: Haskell2010
    build-depends:
        base >=4.9 && <5,
        zerepoch-pab,
        containers -any,
        clock -any,
        lens -any,
        mwc-random -any,
        optparse-applicative -any,
        zerepoch-contract -any,
        zerepoch-ledger -any,
        pretty-simple -any,
        rate-limit -any,
        signal -any,
        stm -any,
        text -any,
        time-units -any,
        yaml -any,
        hedgehog -any,
        primitive -any

executable sync-client
    import: lang
    main-is: Main.hs
    hs-source-dirs: sync-client
    default-language: Haskell2010
    build-depends:
        base >=4.9 && <5,
        bcc-api -any,
        bcc-slotting -any,
        either -any,
        optparse-applicative -any,
        zerepoch-ledger,
        zerepoch-pab,
        text
