cabal-version: 2.0
name: zerepoch-use-cases
version: 0.1.0.0
license: Apache-2.0
license-file: LICENSE NOTICE
maintainer: jann.mueller@bcccoin.io
author: Manuel M T Chakravarty, Jann Müller
stability: experimental
synopsis: Collection of smart contracts to develop the zerepoch/wallet interface
description:
    Collection of smart contracts to develop the zerepoch/wallet interface.
category: Language
build-type: Simple
extra-doc-files: README.md

source-repository head
    type: git
    location: https://github.com/The-Blockchain-Company/zerepoch

flag defer-plugin-errors
    description:
        Defer errors from the plugin, useful for things like Haddock that can't handle it.
    default: False
    manual: True

library
    exposed-modules:
        Zerepoch.Contracts
        Zerepoch.Contracts.Auction
        Zerepoch.Contracts.TokenAccount
        Zerepoch.Contracts.Crowdfunding
        Zerepoch.Contracts.Currency
        Zerepoch.Contracts.ErrorHandling
        Zerepoch.Contracts.Escrow
        Zerepoch.Contracts.SimpleEscrow
        Zerepoch.Contracts.Future
        Zerepoch.Contracts.GameStateMachine
        Zerepoch.Contracts.Governance
        Zerepoch.Contracts.MultiSig
        Zerepoch.Contracts.MultiSigStateMachine
        Zerepoch.Contracts.PingPong
        Zerepoch.Contracts.Prism
        Zerepoch.Contracts.Prism.Credential
        Zerepoch.Contracts.Prism.STO
        Zerepoch.Contracts.Prism.Mirror
        Zerepoch.Contracts.Prism.StateMachine
        Zerepoch.Contracts.Prism.Unlock
        Zerepoch.Contracts.PubKey
        Zerepoch.Contracts.Stablecoin
        Zerepoch.Contracts.Swap
        Zerepoch.Contracts.Uniswap
        Zerepoch.Contracts.Uniswap.OnChain
        Zerepoch.Contracts.Uniswap.OffChain
        Zerepoch.Contracts.Uniswap.Pool
        Zerepoch.Contracts.Uniswap.Trace
        Zerepoch.Contracts.Uniswap.Types
        Zerepoch.Contracts.Vesting
    hs-source-dirs: src
    default-language: Haskell2010
    default-extensions: ExplicitForAll ScopedTypeVariables
                        DeriveGeneric StandaloneDeriving DeriveLift
                        GeneralizedNewtypeDeriving DeriveFunctor DeriveFoldable
                        DeriveTraversable MultiParamTypeClasses
    ghc-options: -Wall -Wnoncanonical-monad-instances -Wunused-packages
                 -Wincomplete-uni-patterns -Wincomplete-record-updates
                 -Wredundant-constraints -Widentities
                 -- See Zerepoch Tx readme
                 -fobject-code -fno-ignore-interface-pragmas -fno-omit-interface-pragmas
    build-depends:
        base -any,
        aeson -any,
        bytestring -any,
        containers -any,
        data-default -any,
        freer-extras -any,
        mtl -any,
        zerepoch-core -any,
        zerepoch-tx -any,
        zerepoch-contract -any,
        playground-common -any,
        zerepoch-ledger -any,
        template-haskell -any,
        lens -any,
        text -any,
        prettyprinter -any,
        hashable -any,
        freer-simple -any,
        streaming -any,
        semigroups -any

    if !(impl(ghcjs) || os(ghcjs))
        build-depends: zerepoch-tx-plugin -any

    if flag(defer-plugin-errors)
        ghc-options: -fplugin-opt ZerepochTx.Plugin:defer-errors

test-suite zerepoch-use-cases-test
    type: exitcode-stdio-1.0
    main-is: Spec.hs
    hs-source-dirs: test
    other-modules:
        Spec.Auction
        Spec.Crowdfunding
        Spec.Currency
        Spec.ErrorHandling
        Spec.Escrow
        Spec.SimpleEscrow
        Spec.Future
        Spec.GameStateMachine
        Spec.Governance
        Spec.MultiSig
        Spec.MultiSigStateMachine
        Spec.PingPong
        Spec.PubKey
        Spec.Prism
        Spec.Rollup
        Spec.Stablecoin
        Spec.Uniswap
        Spec.TokenAccount
        Spec.Vesting
    default-language: Haskell2010
    ghc-options: -Wall -Wnoncanonical-monad-instances
                 -Wincomplete-uni-patterns -Wincomplete-record-updates
                 -Wredundant-constraints -Widentities -rtsopts
                 -- See Zerepoch Tx readme
                 -fobject-code -fno-ignore-interface-pragmas -fno-omit-interface-pragmas
    build-depends:
        zerepoch-tx -any,
        zerepoch-contract -any,
        zerepoch-ledger -any,
        zerepoch-use-cases -any
    build-depends:
        base >=4.9 && <5,
        bytestring -any,
        bcc-crypto-class -any,
        containers -any,
        data-default -any,
        freer-extras -any,
        prettyprinter -any,
        tasty -any,
        tasty-hunit -any,
        tasty-hedgehog >=0.2.0.0,
        tasty-golden -any,
        tasty-quickcheck -any,
        text -any,
        lens -any,
        mtl -any,
        QuickCheck -any,
        freer-simple -any,
        foldl -any,
        streaming -any

    if !(impl(ghcjs) || os(ghcjs))
        build-depends: zerepoch-tx-plugin -any

-- runs emulator traces from zerepoch-use-cases-tests and
-- writes all applied validator scripts to a folder
executable zerepoch-use-cases-scripts
    main-is: Main.hs
    hs-source-dirs:
        scripts
        test
    default-language: Haskell2010
    other-modules:
        Spec.Auction
        Spec.Crowdfunding
        Spec.Currency
        Spec.ErrorHandling
        Spec.Escrow
        Spec.SimpleEscrow
        Spec.Future
        Spec.GameStateMachine
        Spec.Governance
        Spec.MultiSig
        Spec.MultiSigStateMachine
        Spec.PingPong
        Spec.PubKey
        Spec.Prism
        Spec.Rollup
        Spec.Stablecoin
        Spec.TokenAccount
        Spec.Vesting
    ghc-options: -Wall -Wnoncanonical-monad-instances
                 -Wincomplete-uni-patterns -Wincomplete-record-updates
                 -Wredundant-constraints -Widentities -rtsopts
                 -- See Zerepoch Tx readme
                 -fobject-code -fno-ignore-interface-pragmas -fno-omit-interface-pragmas
    build-depends:
        base >= 4.9 && <5,
        aeson -any,
        bytestring -any,
        bcc-crypto-class -any,
        containers -any,
        data-default -any,
        flat -any,
        freer-extras -any,
        hedgehog -any,
        prettyprinter -any,
        QuickCheck -any,
        tasty -any,
        tasty-hunit -any,
        tasty-golden -any,
        tasty-quickcheck -any,
        text -any,
        lens -any,
        mtl -any,
        row-types -any,
        freer-simple -any,
        foldl -any,
        streaming -any,
        directory -any,
        filepath -any,
        serialise -any,
        zerepoch-core -any,
        zerepoch-ledger-api -any,
        zerepoch-tx -any,
        zerepoch-contract -any,
        zerepoch-chain-index -any,
        zerepoch-ledger -any,
        zerepoch-use-cases -any,
        optparse-applicative -any,
        aeson-pretty -any,
        bcc-api -any,
        bcc-binary -any,
        cborg -any,
        memory -any

    if !(impl(ghcjs) || os(ghcjs))
        build-depends: zerepoch-tx-plugin -any
